# BrainWave

./: .gitignore  CMakeLists.txt
src/: driver.cpp  driver_copy.cpp
src/Grammar/: grammar.txt
src/include/brainwave/Generator/: CodeGen.h
src/include/brainwave/Lexer/: Lexer.h
src/include/brainwave/Parser/: AST.h  Parser.h
src/include/brainwave/Sema/: Environment.h  Sema.h
src/include/brainwave/Utils/: Diagnostics.def  Diagnostics.h  Mangler.h  Token.h  TokenKinds.def  TokenKinds.h  Type.h
src/lib/Generator/: CodeGen.cpp
src/lib/Lexer/: Lexer.cpp
src/lib/Parser/: Parser.cpp
src/lib/Sema/: Environment.cpp  Sema.cpp
src/lib/Utils/: Diagnostics.cpp  Mangler.cpp  TokenKinds.cpp  Type.cpp
src/runtime/: CMakeLists.txt  instructions.txt
src/runtime/Cast/: bw_cast.h  cast.c
src/runtime/IO/: IO.c  bw_IO.h
src/runtime/String/: bw_string.h  string.c
